<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <Button
        android:id="@+id/btn_syc_start_record"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_record" />

    <Button
        android:id="@+id/btn_syc_stop_record"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/stop_record" />

    <TextView
        android:id="@+id/tv_syc_record_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_start_speak_syc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_speak_simultaneous" />

    <Button
        android:id="@+id/btn_stop_speak_syc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/stop_speak_simultaneous" />

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo" />

    <Button
        android:id="@+id/btn_switch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/switchover_ch" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_res_syc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="同声" />

            <TextView
                android:id="@+id/tv_translation_syc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="翻译" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>