<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_pick_with_crop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gallery_crop" />

            <Button
                android:id="@+id/btn_camera_with_crop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_crop" />

            <!--<Button-->
                <!--android:id="@+id/btn_pick"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/gallery" />-->

            <!--<Button-->
                <!--android:id="@+id/btn_camera"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/camera" />-->

            <ImageView
                android:id="@+id/iv_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerInside" />

            <Button
                android:id="@+id/btn_orc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_orc" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_translate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/translate"/>

            <TextView
                android:id="@+id/tv_result_translate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>